Fix wrapping and centering of project thumbnails

--- a/css/style.css
+++ b/css/style.css
@@ -196,13 +196,13 @@ hr {
 /* these classes are used in the Projects section */
 
 /* this is the flex container for the projeect thumbnails*/
-#project-container {
+#projects-container {
   display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 90%;
-  margin: 0 auto;
+  margin: 0 5%;
+  justify-content: center;
 }
 
 /* this is for each flex child item */
